[package]
name = "vines"
version = "0.0.2"
edition = "2021"
license-file = "LICENSE"
description = "NES emulator library"
repository = "https://github.com/lyrakisk/vines"
exclude = ["submodules"]

[dependencies]
bitflags = "2.6.0"
egui = "0.31.1"
once_cell = "1.19.0"

[dev-dependencies]
test-case = "3.3.1"
jzon = "0.12.4"
rand = "=0.7.3"

[profile.release]
debug = true
